--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,8 @@ packages = [
     { include = "funlog", from = "src" },
 ]
 # Keep this a dev version, as the dynamic versioning plugin is used for actual release versions:
-version = "0.0.0.dev"
-
 # See: https://github.com/mtkennerly/poetry-dynamic-versioning
+version = "0.0.0.dev"
 [build-system]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.7.0,<2.0.0"]
 build-backend = "poetry_dynamic_versioning.backend"
@@ -35,6 +34,7 @@ poetry-plugin-up = "^0.9.0"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+strif = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
