--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ Repository = "https://github.com/jlevy/funlog"
 
 [project]
 name = "funlog"
-description = "Simple, useful decorators for logging and tallying function calls"
+description = "Tiny, useful decorators for logging and tallying function calls"
 authors = [
     { name="Joshua Levy", email="joshua@cal.berkeley.edu" },
 ]
@@ -16,15 +16,15 @@ license = "MIT"
 requires-python = ">=3.10,<4.0"
 dynamic = ["version"]
 
-dependencies = []
+dependencies = ["strif"]
 
 [dependency-groups]
 dev = [
     "pytest>=8.3.5",
     "ruff>=0.11.0",
-    "mypy>=1.15.0",
     "codespell>=2.4.1",
     "rich>=13.9.4",
+    "basedpyright>=1.28.2",
 ]
 
 [project.scripts]
@@ -106,6 +106,8 @@ include = ["src", "tests", "devtools"]
 reportUnusedCallResult = false
 reportAny = false
 reportExplicitAny = false
+reportPrivateUsage = false
+reportMissingTypeStubs = false
 
 [tool.codespell]
 # ignore-words-list = "foo,bar"
