--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ license = "MIT"
 requires-python = ">=3.10,<4.0"
 dynamic = ["version"]
 
-dependencies = ["strif"]
+dependencies = [
+    "strif>=0.2.1"
+]
 
 [dependency-groups]
 dev = [
