--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,7 @@ license = "MIT"
 requires-python = ">=3.10,<4.0"
 dynamic = ["version"]
 
-dependencies = [
-    "strif>=0.2.1"
-]
+dependencies = []  # None!
 
 [dependency-groups]
 dev = [
